# social-flood

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  API_STRUCTURE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CI_CD_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  FAQ.md  GOOGLE_ADS_OAUTH_SETUP.md  GOOGLE_SERVICES.md  IMPROVEMENT_IMPLEMENTATION.md  IMPROVEMENT_TASKS.md  INTEGRATION_TESTS.md  LICENSE  Makefile  PERFORMANCE_TUNING.md  PROJECT_EVALUATION_AND_RECOMMENDATIONS.md  QUICK_START_IMPROVEMENTS.md  README.md  REDDIT_INTEGRATION_GUIDE.md  ROADMAP.md  SECURITY_GUIDELINES.md  TESTING.md  TEST_RESULTS.md  TROUBLESHOOTING.md  alembic.ini  cli.py  coverage.xml  demo_parallel_autocomplete.py  docker-compose.yml  main.py  nltk.txt  pyproject.toml  pytest.ini  (+5 more)
.github/: dependabot.yml
.github/workflows/: README.md  WORKFLOWS.md  ci-cd.yml  docker-build-sign.yml  main.yml  release.yml  security.yml  update-base-image.yml
.well-known/: security.txt
alembic/: env.py
app/: __version__.py  main.py
app/api/google_ads/: __init__.py  client.py  enums.py  google_ads_api.py  google_ads_client.py  models.py
app/api/google_autocomplete/: google_autocomplete_api.py
app/api/google_maps/: __init__.py  dataforseo_batch.py  dataforseo_cache.py  dataforseo_client.py  dataforseo_tasks.py  google_maps_api.py  models.py
app/api/google_news/: google_news_api.py
app/api/google_trends/: google_trends_api.py
app/api/youtube_transcripts/: youtube_transcripts_api.py
app/core/: README.md  auth.py  base_router.py  base_router_example.py  cache_backends.py  cache_manager.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  health_checks.py  http_client.py  input_sanitizer.py  logging_config.py  middleware.py  migration_example.py  proxy.py  rate_limiter.py  redis_manager.py  request_id_middleware.py  search.py  security.py  utils.py
app/schemas/: __init__.py  enums.py  responses.py
app/services/: __init__.py  google_autocomplete_service.py  google_maps_scraper.py  google_maps_service.py  google_news_service.py  google_trends_service.py  youtube_transcripts_service.py
config/: config.py
docs/: BEST_PRACTICES.md  COMPLEMENTARY_TOOLS.md  FEATURE_ROADMAP.md  GOOGLE_ADS_API_REFERENCE.md  GOOGLE_ADS_SETUP.md  OPEN_SOURCE_INTEGRATIONS.md  TEST_REPORT.md
examples/: base_router_example.py
scripts/: DOCKER_MULTIARCH.md  DOCKER_SCOUT_GUIDE.md  README.md  SUPPLY_CHAIN_SECURITY.md  check_code_quality.sh  check_env.py  docker_multiarch.sh  generate_google_ads_refresh_token.py  increment_version.py  install.sh  sign_image.sh  update_base_image.sh  verify_attestations.sh
tests/: conftest.py  test_auth.py  test_autocomplete_parallel.py  test_base_router.py  test_cache_manager.py  test_config.py  test_google_autocomplete_api.py  test_google_news_api.py  test_google_trends_api.py  test_input_sanitizer.py  test_main.py  test_rate_limiter.py  test_search.py  test_utils.py  test_youtube_transcripts_api.py
tests/integration/: __init__.py  test_api_endpoints.py  test_auth_flow.py  test_google_autocomplete_integration.py  test_google_news_integration.py  test_google_trends_integration.py  test_rate_limiting.py  test_youtube_transcripts_integration.py
tests/unit/: __init__.py  test_http_client.py
